* Using bookend query to improve visuals of JFree chart on Legacy Data Point Details page.
* Improved accuracy of writes per second for SQL Point Value databases
* Fixed JsonEmport script utility always had admin privilege
* Offer default script permissions to event handlers
* Fix bug in text email template for data point events

*Version 3.3.0*
* Ability to import a point hierarchy path for data points in the data point JSON via "path" : "new path"
* Improved accuracy of Rollups
* Modified statistics according to 
* Analog Statistics minimum value with no values in period changed from null to NaN
* Analog Statistics maximum value with no values in period changed from null to NaN
* Analog Statistics average value no values in period changed from null to NaN
* Analog Statistics integral value with no values in period changed from null to NaN
* Analog Statistics delta value with no values in period changed from null to NaN
* Gracefully skip loading data sources and data points for modules that are missing, but log occurances
* Better feedback on Core and Module upgrade/update errors
* Better dependency checking for modules during upgrade/update
* Adding tags for data points to arbitrarily store information against a data point, name and device name are default tags
* Adding websocket to notify when a data point tag is changed
* Allow accessing tags for a data point from Mango javascript
* Update Apache commons-lang3 library to 3.7
* Update Apache commons-logging to 1.2
* Improved Audit change tracking
* No longer exporting Event Detector array within Data Point JSON export
* Adding 'authorization' header to default CORS headers in env.properties
* Adding indexes to events SQL table for improved performance
* Improved database upgrade logging to db upgrade logs
* Adding Unique constraint to username's in database, delete users with higher ids and same username
* Adding env property to compact H2 database during shutdown db.h2.shutdownCompact (default is false)